# API-Documentation.yaml
@@ -1855,13 +1855,13 @@ paths:
                       properties:
                         conversationId:
                           type: integer 
-                        isContactInConversation:
-                          type: boolean
                         isConversationSeen:
                           type: boolean  
-                        contact:
+                        contact:                     
                           type: object
                           properties:
+                            InConversation:
+                              type: boolean
                             imageUrl:
                               type: string
                             id:
